# old_bb_milestones

./: CHANGELOG.md  LINTING.md  Makefile  Milestones_TestData_formated.txt  README-old.md  README.md  alembic.ini  build.sh  debug.sh  docker-compose.debug.yml  docker-compose.yml  docker-milestones-api-swarm.yml  linter.sh  migrate.sh  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  run-linter.sh  run-postman.sh  run-pytest.sh  run.sh  setup.md  test_awards_actions.py
Docker/: Dockerfile.milestones_api_localhost  Dockerfile.milestones_api_swarm  crontab  entrypoint_localhost.sh  entrypoint_swarm.sh  swarm-leader.sh
app/: enums.py  exceptions.py  main.py  middleware.py
app/actions/: base_actions.py  base_actions_.py  helper_actions.py  utils.py
app/configs/: __init__.py  database_configs.py  run_configs.py
app/database/: config.py  crud.py  db_models.py
app/libraries/: sms.py  sparkpost.py
app/models/: base_class.py
app/routers/: __init__.py
app/seed_data/: __init__.py  seed_system_awards.py
app/unit_tests/: segment_unit.py
app/utilities/: GeomEnum.py  Helpers.py  PositiveNumbers.py  Struct.py  __init__.py  xmltodict.py
migrations/: dump-test.sh  env.py  milestones_nodata_v1.9.3.sql
migrations/versions/: e3452897b720_initial_commit.py
tests/: MilestonesCollections.json  conftest.py  postman.sh  testutil.py
tests/awards/: test_awards_integration.py
tests/clients/: clients_unit.py  test_clients_integration.py
tests/messages/: test_messages_integation.py
tests/postman/: Milestones_admins.postman_collection.json  (+15 more)
(+141 files in other folders)
